# heat_equation_solver_comparisons

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: analytical_solution.py  analytical_solution_nondim.py  constants.py  numerical_solution.py  numerical_solution_neumann.py  numerical_solution_nondim.py  utils.py
src/pinn/: data_module.py  dl.py  executor.py  generate_dataset.py  model.py  model_neumann.py  visualization.py
