[project]
name = "heat-equation-solver-comparisons"
version = "0.1.0"
description = "Comparison of analytical, numerical, and PINN solvers for the heat equation"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.1",
    "pandas>=2.2",
    "plotly>=5.24",
    "sympy>=1.13",
    "torch>=2.5",
]
